# aws-sso-workstations

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md
cdk/: app.py  image_builder.py  pyproject.toml  workstation_baseline.py
infra/image-builder/components/: workstation-dev-tools.yml
infra/image-builder/scripts/: create-ami.sh
infra/policies/: permission-set-abac-explicit-deny.json  permission-set-abac.json
infra/scripts/: bootstrap-iam-for-ssm.sh  common-utils.sh  create-workstation.sh  list-instances.sh  s3-sync.sh  start-session.sh  stop-workstation.sh
shared/image-builder/components/: minimal-test.yml  workstation-dev-tools-v2.yml  workstation-dev-tools-v3.yml  workstation-dev-tools-v4.yml
